--- a/stm32f429_GPIO/Makefile
+++ b/stm32f429_GPIO/Makefile
@@ -129,7 +129,7 @@ cgdb_bmp:
 flash_openocd:
 	openocd -f interface/stlink-v2.cfg \
 	-c "transport select hla_swd" \
-	-f target/stm32f4x_stlink.cfg \
+	-f target/stm32f4x.cfg \
 	-c "init" \
 	-c "reset init" \
 	-c "halt" \
